--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,9 @@
     <string name="action_settings">Settings</string>
 
     <string name="hello"></string>
-    <string name="startRecord">开始录音</string>
-    <string name="stopRecord">结束录音</string>
-    <string name="startPlay">开始播放</string>
-    <string name="stopPlay">结束播放</string>
+    <string name="startRecord">start Record</string>
+    <string name="stopRecord">stop Record</string>
+    <string name="startPlay">start Play</string>
+    <string name="stopPlay">stop Play</string>
+    <string name="title_activity_record_list">RecordListActivity</string>
 </resources>
