--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="stopRecord">stop Record</string>
     <string name="startPlay">start Play</string>
     <string name="stopPlay">stop Play</string>
-    <string name="title_activity_record_list">RecordListActivity</string>
+    <string name="showList">show Record List</string>
+    <string name="title_activity_record_list">RecordList</string>
 </resources>
